fix (CommentInfo): overflow on mobile

--- a/src/components/Comment/CommentInfo.module.scss
+++ b/src/components/Comment/CommentInfo.module.scss
@@ -8,7 +8,6 @@
 
 	> .date {
 		color: v.$clr-text-400;
-		white-space: nowrap;
 	}
 
 	> .current-user {
